--- a/Downloads/student/student/src/main/resources/application.properties
+++ b/Downloads/student/student/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/studentdata
 spring.datasource.username=root
 spring.datasource.password=anil123
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-server.port=8084
+server.port=8085
 #log file
 #logging.file.name=thbsApp.log
 
