--- a/IdeaProjects/Hello/pom.xml
+++ b/IdeaProjects/Hello/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.example</groupId>
     <artifactId>Hello</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <finalName>Hello</finalName></build>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
